force-app/main/default/objects/KimbleOne__AllowancePeriodAllowanceAdjustment__c/KimbleOne__AllowancePeriodAllowanceAdjustment__c.object-meta.xml
<CustomObject>
    <label>Allowance Period Allowance Adjustment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Allowance Period Allowance Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allowance Period Allowance Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>