force-app/main/default/objects/KimbleOne__AllowancePeriodAllowanceAdjustment__c/fields/KimbleOne__AllowancePeriodAllowance__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowancePeriodAllowance__c</fullName>
    <label>Allowance Period Allowance</label>
    <referenceTo>KimbleOne__AllowancePeriodAllowance__c</referenceTo>
    <relationshipLabel>Allowance Period Allowance Adjustments</relationshipLabel>
    <relationshipName>AllowancePeriodAllowanceAdjustments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>