force-app/main/default/objects/KimbleOne__AllowancePeriodAllowanceAdjustment__c/fields/KimbleOne__AllowanceTypeAdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowanceTypeAdjustmentType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Adjustment Type</label>
    <referenceTo>KimbleOne__AllowanceTypeAdjustmentType__c</referenceTo>
    <relationshipLabel>Allowance Period Allowance Adjustments</relationshipLabel>
    <relationshipName>AllowancePeriodAllowanceAdjustments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>