force-app/main/default/objects/KimbleOne__AllowancePeriodAllowanceAdjustment__c/fields/KimbleOne__IsApplicable__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Applicable</label>
    <type>Checkbox</type>
</CustomField>